Fixed Bug 64673 - Mobile Toolbar focus box is too small
Solution: Add more padding

--- a/ui/apps/themes/components/toolbar.less
+++ b/ui/apps/themes/components/toolbar.less
@@ -161,7 +161,7 @@
         flex-direction: row;
         height: 48px;
         > li > a {
-            padding: 4px 24px;
+            padding: 8px 24px;
         }
         i.fa {
             font-size: 22px;
